--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 *.exe
 .vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
